@@ -1,4 +1,6 @@
 Sigil 0.5 TBA
+    - Fix issue 788: Error saving when the folder the file was in was renamed
+      outside Sigil.
     - Fix issue 998: Don't select file extension on rename in book browser.
     - Fix issue 1111: Failure to rename to same name with case change.
     - Implement issue 205: Drag and drop for images to book and code views.
